--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^1.17.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "mongoose": "^5.0.13"
   }
