--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cors": "^2.8.4"
+    "cors": "https://registry.npmjs.org/cors/-/cors-2.8.4.tgz"
   },
   "dependencies": {
     "axios": "^0.18.0",
