--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
